<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="nl.roebers.arnoud.mytestapplication22_6_2016.MainActivity"
    tools:showIn="@layout/activity_main">

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true">

        <TextClock
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textClock"
            android:layout_row="0"
            android:layout_column="0" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/hello_world"
            android:id="@+id/textView"
            android:layout_row="0"
            android:layout_column="4"
            android:autoText="false" />

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="127dp"
            android:layout_height="wrap_content"
            android:text="@string/hello_button"
            android:id="@+id/button3"
            android:layout_row="1"
            android:layout_column="0" />

        <WebView
            android:layout_width="595dp"
            android:layout_height="165dp"
            android:id="@+id/webView"
            android:layout_row="1"
            android:layout_column="2" />

        <Switch
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hello_switch"
            android:id="@+id/switch1"
            android:layout_row="4"
            android:layout_column="0" />

        <ToggleButton
            android:layout_width="127dp"
            android:layout_height="wrap_content"
            android:text="@string/hello_toggle_button"
            android:id="@+id/toggleButton"
            android:layout_row="5"
            android:layout_column="0"
            android:textOn="@string/hello_text_on"
            android:textOff="@string/hello_text_off" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="Large Text"
            android:id="@+id/textView2"
            android:layout_row="5"
            android:layout_column="2" />

        <AnalogClock
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/analogClock"
            android:layout_row="6"
            android:layout_column="0" />

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/imageButton"
            android:layout_row="6"
            android:layout_column="2" />

        <EditText
            android:layout_width="651dp"
            android:layout_height="wrap_content"
            android:id="@+id/editText"
            android:layout_row="8"
            android:layout_column="2" />

    </GridLayout>

</RelativeLayout>
